Changed colour and size for header and paragraph

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="css" href="style.css" media="all" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=devicewidth, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -13,8 +14,9 @@
  </header>
  <main>
  <h2>Brianna Dixon</h2>
- <p>I am a second year Computing student attending the University of the West Indies. I enjoy baking, cooking, working out 
-and listening to music. I love to go to the river and enjoy the cool and clear water. </p>
+ <p> I am a second year Computing student attending the University of the West Indies. I enjoy baking, cooking, working out 
+and listening to music. I love to go to the river and enjoy the cool and clear water. I am interested in Web Development
+because I think it will improve my thinking and creativity skills. </p>
  </main>
  <footer>
  <p>Copyright &copy; 2020 Brianna Dixon.</p>
