--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
  <p> I am a second year Computing student attending the University of the West Indies. I enjoy baking, cooking, working out 
 and listening to music. I love to go to the river and enjoy the cool and clear water. I am interested in Web Development
 because I think it will improve my thinking and creativity skills. </p>
+<img src= Flowers.jfif >
  </main>
  <footer>
  <p>Copyright &copy; 2020 Brianna Dixon.</p>
